--- a/6-8/day1/slides/02_slide.tex
+++ b/6-8/day1/slides/02_slide.tex
@@ -10,5 +10,5 @@
     \end{itemize}
     
     \vspace{0.5cm}
-    \heading{Tools:} Google Colab
+    \heading{Tools:} Google Colab \href{https://colab.research.google.com}{(https://colab.research.google.com)}
   \end{frame}
